_sass/_base.scss
/**
 * Reset some basic elements
 */
body, h1, h2, h3, h4, h5, h6, p, blockquote, pre, hr, dl, dd, ol, ul, figure {
    margin: 0;
    padding: 0;
}

/**
 * Basic styling
 */
body {
    background-color: white;
    color: #3E4349;
    font-family: 'Open sans', sans-serif;
    font-family: 'goudy old style', 'minion pro', 'bell mt', Georgia, 'Hiragino Mincho Pro', serif;
    font-size: 17px;
    line-height: 1.5em;
    -webkit-text-size-adjust: 100%;
    -webkit-font-feature-settings: "kern" 1;
    -moz-font-feature-settings: "kern" 1;
    -o-font-feature-settings: "kern" 1;
    font-feature-settings: "kern" 1;
    font-kerning: normal;
}

::-webkit-scrollbar              { padding-top: $spacing-unit/2; background-color: #fff; height: 5px;}
::-webkit-scrollbar-button       { }
::-webkit-scrollbar-track        { background-color: #ccc; }
::-webkit-scrollbar-track-piece  { }
::-webkit-scrollbar-thumb        { background-color: #ddd; }
::-webkit-scrollbar-corner       { }
::-webkit-resizer                { }

p, blockquote, pre, ul, ol, dl, figure,
%vertical-rhythm {
    margin-bottom: $spacing-unit /2;
}

/**
 * Images
 */
img {
    max-width: 100%;
    vertical-align: middle;
}

/**
 * Figures
 */
figure > img {
    display: block;
}

figcaption {
    font-size: $postmeta-font-size;
}

/**
 * Lists
 */
ul, ol {
    margin-left: $spacing-unit;
    li {
    }
}

/**
 * Headings
 */
h1, h2, h3, h4, h5, h6 {
    margin: $spacing-unit 0 $spacing-unit 0;
    font-family: 'Garamond', 'Merriweather', 'Georgia', serif;
    font-weight: normal;
    line-height: 1.2;
    width: 100%;
}

h1.page-title {
    margin: $spacing-unit*1.5 0 $spacing-unit/2 0;
    font-size: 2.4em;
    @include media-query($on-palm) {
        margin-top: $spacing-unit/2;
    }
}

h1 {
    margin: $spacing-unit/2 0 $spacing-unit/2 0;
    font-size: 1.8em;
}

h2 {
    margin: $spacing-unit/2 0 $spacing-unit/2 0;
    font-size: 1.4em;
}

/**
 * Links
 */
a {
    color: #004B6B;
    text-decoration: none;
    border-bottom: 1px dotted;
    &:hover {
        color: orange;
    }
}

/**
 * Blockquotes
 */
blockquote {
    color: $grey;
    border-left: 4px solid $grey-light;
    padding-left: $spacing-unit / 2;
    font-size: 18px;
    font-style: italic;

    > :last-child {
        margin-bottom: 0;
    }
}

/**
 * Code formatting
 */
pre, code {
    background-color: #eee;
    font-family: 'Consolas', 'Menlo', 'Deja Vu Sans Mono', 'Bitstream Vera Sans Mono', monospace;
    font-size: 0.9em;
    line-height: 1.3em;
    border-radius: 2px;
}

pre {
    overflow-x: auto;
    padding: 0.4em 0.4em 0.4em $spacing-unit/2;
    @include media-query($on-palm) {
        margin-left: 0.7em;
    }

    > code {
        border: 0;
        padding-right: 0;
        padding-left: 0;
    }
}

.video-container {
    position:relative;
    padding-bottom:56.25%;
    padding-top:30px;
    height:0;
    overflow:hidden;
    margin-bottom: $spacing-unit;
}

.video-container iframe, .video-container object, .video-container embed {
    position:absolute;
    top:0;
    left:0;
    width:100%;
    height:100%;
}

/**
 * Wrapper
 */
.wrapper {
    max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit} * 2));
    max-width:         calc(#{$content-width} - (#{$spacing-unit} * 2));
    margin-right: auto;
    margin-left: auto;
    padding-right: $spacing-unit/2;
    padding-left: $spacing-unit/2;
    @extend %clearfix;

    @include media-query($on-laptop) {
        max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit}));
        max-width:         calc(#{$content-width} - (#{$spacing-unit}));
    }
}

/**
 * Clearfix
 */
%clearfix {
    &:after {
        content: "";
        display: table;
        clear: both;
    }
}

/**
 * Icons
 */
.icon {
    > svg {
        display: inline-block;
        width: 16px;
        height: 16px;
        vertical-align: middle;
        path {
            fill: $grey;
        }
    }
}

.note {
    padding: $spacing-unit/3 0 $spacing-unit/3 $spacing-unit/2;
    background-color: #333;
    border-left: 1em solid #66f;
    h5 {
        font-size: 1.2em;
        color: #66f;
    }
}

